bug: correction du redirect en fin de script de maniere plus globale fnc: ajout de la possibilité d'effectuer des sorties de stocks depuis la pharmacie sans passer par dispensation > delivrance bug: le systemMsg n'avait pas de z-index, il se trouvais souvent sous les date pickers
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@8983 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/mediboard/messages.css
+++ b/style/mediboard/messages.css
@@ -19,6 +19,7 @@ table.dialog #systemMsg,
   cursor: pointer;
   position: absolute;
   right: 10px;
+  z-index: 850;
 }
 
 #login #systemMsg {
